--- a/Bingo.html
+++ b/Bingo.html
@@ -1,23 +1,18 @@
-<!DOCTYPE html>
-<html lang="es">
+<html ng-app="JuegoBingo">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bingo</title>
+    <title>Juego Bingo</title>
     <link href="estilos/estilos.css" type="text/css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 </head>
-<body>
+<body ng-controller="ControladorJuegoBingo">
     <button class="boton">
-        iniciar juego
+        Iniciar Juego
     </button>
     <button class="boton">
-        sacar balota
+        Sacar Balota
     </button>
-    <!-- Contenido aquí -->
 </body>
 </html>
-
-
 
 
 
